--- a/word-counter-app/index.html
+++ b/word-counter-app/index.html
@@ -11,11 +11,11 @@
         <h1>Word Counter</h1>
         <textarea name="textarea" id="textarea" placeholder="Write your text here..."></textarea>
         <div class="result-div">
-            <p id="words">0
-                <span>Words</span>
+            <p >Words
+                <span id="words">0</span>
             </p>
-            <p id="chars">0
-                <span>Characters</span>
+            <p >Characters
+                <span id="chars">0</span>
             </p>
         </div>
     </div>
