--- a/word-counter-app/index.html
+++ b/word-counter-app/index.html
@@ -10,6 +10,9 @@
     <div class="main-div">
         <h1>Word Counter</h1>
         <textarea name="textarea" id="textarea" placeholder="Write your text here..."></textarea>
+        <button id="calculate" onclick={init()}>
+            Calculate
+        </button >
         <div class="result-div">
             <p >Words
                 <span id="words">0</span>
@@ -18,6 +21,7 @@
                 <span id="chars">0</span>
             </p>
         </div>
+        
     </div>
 
     <script src="app.js"></script>
